2010-08-14  Ivan Maidanski <ivmai@mail.ru>
	* extra/threadlibs.c (main): Remove --wrap for "read" (since not
	wrapped anymore).
	* doc/README.linux (GC_USE_LD_WRAP): Ditto.
	* os_dep.c (__wrap_read): Ditto (in the comment).

2010-08-14  Ivan Maidanski <ivmai@mail.ru> (with help from Hans Boehm)

	* include/gc_pthread_redirects.h: Test GC_PTHREADS and GC_H at the
	beginning of the file.
	* include/gc_pthread_redirects.h (GC_PTHREAD_EXIT_ATTRIBUTE): New
	macro (defined only for Linux and Solaris).
	* include/gc_pthread_redirects.h (GC_pthread_cancel,
	GC_pthread_exit): Declare new API function (only if
	GC_PTHREAD_EXIT_ATTRIBUTE).
	* include/gc_pthread_redirects.h (pthread_cancel, pthread_exit):
	Redirect (if GC_PTHREAD_EXIT_ATTRIBUTE).
	* include/private/pthread_support.h (DISABLED_GC): New macro.
	* pthread_support.c (pthread_cancel, pthread_exit): Restore
	original definition or declare "real" function (if needed and
	GC_PTHREAD_EXIT_ATTRIBUTE).
	* pthread_support.c (GC_pthread_cancel_t, GC_pthread_exit_t):
	Declare new types if needed.
	* pthread_support.c (GC_pthread_cancel, GC_pthread_exit): New
	function definition (only if GC_PTHREAD_EXIT_ATTRIBUTE).
	* pthread_support.c (GC_init_real_syms): Initialise pointers to
	the "real" pthread_cancel and pthread_exit (only if
	GC_PTHREAD_EXIT_ATTRIBUTE).
	* pthread_support.c (GC_unregister_my_thread): Enable collections
	if DISABLED_GC was set (only if GC_PTHREAD_EXIT_ATTRIBUTE).
	* pthread_support.c (pthread_cancel, pthread_exit): New wrapped
	function definition (only if GC_PTHREAD_EXIT_ATTRIBUTE defined).
	* pthread_support.c (GC_start_routine): Refine the comment.
	* extra/threadlibs.c (main): Adjust --wrap (add "read",
	"pthread_exit", "pthread_cancel" but remove "sleep").
	* doc/README.linux (GC_USE_LD_WRAP): Ditto.
	* doc/README.linux: Expand all tabs to spaces; remove trailing
	spaces at EOLn.

2010-08-12  Ivan Maidanski <ivmai@mail.ru> (mostly really Mike Gran)
